--- a/public/index.html
+++ b/public/index.html
@@ -9,41 +9,80 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      background: #f5f5f5;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #333;
     }
 
     button {
-      padding: 10px 20px;
+      padding: 12px 20px;
       font-size: 18px;
       cursor: pointer;
-      margin: 10px;
+      border: none;
+      background: #007BFF;
+      color: white;
+      border-radius: 5px;
+      margin: 15px 0;
+    }
+
+    button:disabled {
+      background: #555;
+      cursor: not-allowed;
+    }
+
+    .loader {
+      display: none;
+      font-size: 18px;
+      color: #007BFF;
     }
 
     #gallery {
-      margin-top: 20px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      margin-top: 20px;
     }
 
     .photo-container {
       position: relative;
       margin: 10px;
+      background: white;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     }
 
     .photo-container img {
-      max-width: 200px;
-      border: 2px solid #333;
+      max-width: 100%;
+      height: auto;
       border-radius: 5px;
+    }
+
+    .filename {
+      font-size: 14px;
+      color: #333;
+      margin-top: 5px;
     }
 
     .download-btn {
       display: block;
       text-decoration: none;
-      background: #007BFF;
+      background: #28a745;
       color: white;
       padding: 5px;
       border-radius: 5px;
       margin-top: 5px;
+      font-size: 14px;
+    }
+
+    /* Responsivo */
+    @media (max-width: 600px) {
+      .photo-container {
+        width: 90%;
+      }
     }
   </style>
 </head>
@@ -51,46 +90,53 @@
 <body>
 
   <h1>📸 Captura de Cámara</h1>
-  <button onclick="capturePhoto()">Tomar Foto</button>
+  <button id="captureBtn" onclick="capturePhoto()">Tomar Foto</button>
+  <p class="loader" id="loader">📷 Capturando imagen...</p>
+
   <div id="gallery"></div>
 
   <script>
     async function capturePhoto() {
+      const captureBtn = document.getElementById("captureBtn");
+      const loader = document.getElementById("loader");
+
+      captureBtn.disabled = true;
+      loader.style.display = "block";
+
       try {
         const response = await fetch('/capture');
         const data = await response.json();
 
         if (data.success) {
-          const imageUrl = data.imageUrl;
-          addPhotoToGallery(imageUrl);
+          addPhotoToGallery(data.imageUrl, data.filename);
         } else {
           alert('Error al capturar la imagen.');
         }
       } catch (error) {
         console.error('Error:', error);
         alert('Error al comunicarse con el servidor.');
+      } finally {
+        captureBtn.disabled = false;
+        loader.style.display = "none";
       }
     }
 
     async function loadPhotos() {
       try {
-        const response = await fetch('/images');
-        const html = await response.text();
+        const response = await fetch('/latest-images');
+        const photos = await response.json();
 
-        // Extraer imágenes del HTML generado por el backend
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(html, 'text/html');
-        const links = doc.querySelectorAll('a');
+        document.getElementById('gallery').innerHTML = ''; // Limpiar galería
 
-        links.forEach(link => {
-          addPhotoToGallery(link.getAttribute('href'));
+        photos.forEach(photo => {
+          addPhotoToGallery(photo.url, photo.filename);
         });
       } catch (error) {
         console.error('Error al cargar imágenes:', error);
       }
     }
 
-    function addPhotoToGallery(imageUrl) {
+    function addPhotoToGallery(imageUrl, filename) {
       const gallery = document.getElementById('gallery');
       const container = document.createElement('div');
       container.className = 'photo-container';
@@ -98,18 +144,23 @@
       const img = document.createElement('img');
       img.src = imageUrl;
 
+      const nameTag = document.createElement('p');
+      nameTag.className = 'filename';
+      nameTag.innerText = filename;
+
       const downloadLink = document.createElement('a');
       downloadLink.href = imageUrl;
-      downloadLink.download = imageUrl.split('/').pop();
+      downloadLink.download = filename;
       downloadLink.className = 'download-btn';
       downloadLink.innerText = 'Descargar';
 
       container.appendChild(img);
+      container.appendChild(nameTag);
       container.appendChild(downloadLink);
       gallery.prepend(container);
     }
 
-    // Cargar imágenes al cargar la página
+    // Cargar las últimas 9 fotos al iniciar
     window.onload = loadPhotos;
   </script>
 
